# mattermost-meetbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
mattermost_meetbot/: google_api.py  main.py  settings.py
